# embedding-server

./: .env.example  .gitignore  THIRD_PARTY_NOTICES.md  compose.yaml  mise.toml  openapi.yaml
development/: Dockerfile  compose.yaml  server.Dockerfile  worker.fake.Dockerfile
server/: .air.toml  .dockerignore  Dockerfile  go.mod  go.sum  main.go  sqlite_gorm_test.go
server/api/: oapi-codegen.yaml  oapi.interface.config.yaml  oapi.model.config.yaml  openapi.interface.gen.go  openapi.model.gen.go
server/config/: config.go
server/model/: model.go
server/repository/: embedding_cache.go  embedding_job.go  repository.go
server/repository/gormrepo/: db.go  embedding_cache.go  embedding_job.go  repository.go  repository_test.go
server/repository/mock_repository/: mock_embedding_cache.go  mock_embedding_job.go
server/router/: embeddings.go  embeddings_test.go  router.go  testhelper.go  worker.go  worker_test.go
server/service/: cleanup.go  cleanup_test.go  embedding.go  embedding_request.go  embedding_request_test.go  embedding_test.go  job_file.go  job_file_test.go  notifier.go  notifier_test.go
server/testutil/: testhelpers.go
worker/: .dockerignore  Dockerfile  embedding_engine.py  job_runner.py  main.py  ocr_engine.py  pyproject.toml  vector_math.py  worker_api.py  worker_config.py  worker_object_store.py
worker/scripts/: qwen3_vl_embedding.py
